[package]
name = "eng-turbo"
version = "0.0.0"
authors = ["Frank Pereny <fjpereny@gmail.com>"]
edition = "2024"
description = "Turbo compressor and expander gas calculations"
readme = "README.md"
repository = "https://github.com/fjpereny/rotating-equipment"
license = "MIT"
keywords = ["aerospace", "mathematics", "science", "science::robotics"]


[dependencies]
aga8 = "0.5.1"
eframe = "0.33.0"